--- a/app/pages/list/list-common.css
+++ b/app/pages/list/list-common.css
@@ -28,3 +28,10 @@ ListView {
   from { opacity: 0; }
   to { opacity: 1; }
 }
+
+.delete-container {
+  background-color: #CB1D00;
+  padding: 5;
+  height: 20;
+  margin-right: 8;
+}
